--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ p {
 }
 
 html {
-  background-color: #CEF62C ;
+  background-color:  ;
 }
 
 body {
-  width: 900px;
+  width: 600px;
   margin: 0 auto;
-  background-color:#00539F ;
+  background-color: ;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
@@ -34,7 +34,7 @@ img {
 h2 {
   margin: 0;
   padding: 30px 0;    
-  color: #515737;
+  color: ;
   text-shadow: 1px 1px 1px black;
   text-align: center;
 }
